--- a/www/index.html
+++ b/www/index.html
@@ -28,5 +28,9 @@
         <!-- Required -->
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        
+        <script type="text/javascript">
+            app.initialize();
+        </script>
     </body>
 </html>
